--- a/style.css
+++ b/style.css
@@ -1,88 +1,70 @@
-*, *::before, *::after{
-    box-sizing: border-box;
-}
+
 
 body{
-    margin: 0;
-    padding: 0;
-    background: url(background.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    color: teal;
-    text-align: center;
-    backdrop-filter: blur(5px);
-    background-color: rgba(0, 0, 0, 0.918);
-    
-}
-
-.txtAusg{
-    margin: 50px 0px 20px 0px ;
-    width: 1000px;
-    text-align: center;
-    border-radius: 12px;
-    background-color: rgba(218, 223, 226, 0.3);
-    color: greenyellow;
-}
-
-.row{
-    background-color: rgba(218, 223, 226, 0.1);
+    display: flex;
     justify-content: center;
-    width: 100%;
-    height: 350px;
-    border-radius: 8px;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgb(50, 50, 50);
+    color: lightgreen;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+
 }
 
-.btnSection{
-    height: 80px;
-}
 
-.footer{
-    margin-top: 100%;
-}
-
-.genButton{
-    width: 300px;
-    height: 50px;
-    border-radius: 12px;
-    background-color: rgba(0, 0, 0, 0.274);
-    color: green;
-    font-size: 24px;
-    font-weight: bold;
-}
-
-#txt_Psw_Length{
-    width: 60px;
+.container{
+    max-width: 500px;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-    background-color: rgba(218, 223, 226, 0.1);
+    flex-direction: column;
+    background-color: rgba(6, 10, 26, 0.658);
+    padding: 20px;
+    box-shadow: 5px 5px 15px black;
+    border-radius: 10px;
+    margin: 10px;
+}
+
+
+.options{
+    background-color: rgba(34, 36, 48, 0.658);
     color: white;
-    border-radius: 12px;
-    font-weight: bolder;
-    font-size: 24px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 10px;
+    flex-wrap: wrap;
+    padding: 10px;
 }
 
-h1{
-    background-color: rgba(3, 25, 37, 0.521);
-    border-radius: 12px;
-    font-size: 40px;
-    font-weight: bold;
-    height: 60px;
-}
 
-li{
-    list-style: none;
-}
-
-.scrollCont{
-    justify-content: center;
+.outputlabel{
+    margin: 35px;
+    width: 100%;
+    height: 40px;
+    border-radius: 10px;
     text-align: center;
-    overflow-y: auto;
-    max-width: 600px;
-    height: 400px; 
-    
+    font-weight: bold;
+    font-size: 1.2rem;
 }
 
-input[type="checkbox"] {
-    left: -15px;
-  }
+.btn{
+    margin: 30px;
+    padding: 15px;
+    border-radius: 10px;
+    border: 0;
+    font-size: 1.1rem;
+    font-weight: bold;
+    background-color: chartreuse;
+    box-shadow: 5px 5px 15px black;
+}
 
-
+.lenthField{
+    width: 50px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1rem;
+    border-radius: 7px;
+}
