--- a/style.css
+++ b/style.css
@@ -146,3 +146,8 @@ body{
     background-color: lightblue;
     color: black;
 }
+
+.toast.warning{
+    background-color: yellow;
+    color: black;
+}
